Adding readme information

--- a/ClientApp/src/app/add-update-product/add-update-product.component.html
+++ b/ClientApp/src/app/add-update-product/add-update-product.component.html
@@ -22,6 +22,6 @@
             <label for="time-input">Price:</label>
             <input type="number" id="age-input" name="price" [(ngModel)]="productInfo.price" class="form-control" />
         </div>
-        <button type="button" class="btn btn-primary" (click)="addOrUpdateProductRecord($event);">Save</button>
+        <button type="button" class="btn btn-primary" (click)="addOrUpdateProductRecord($event);">Save Product</button>
     </form>
 </div>
